--- a/index.qmd
+++ b/index.qmd
@@ -32,8 +32,9 @@ the [Department of Computer and information
 Science](https://www.cs.allegheny.edu/) at [Allegheny
 College](https://www.allegheny.edu/), the resources and projects are all
 publicly available. For instance, this course leverages and extends the
-open-access course textbook called [A First Course on Data Structures in
-Python](https://github.com/donsheehy/datastructures). You can access all of the
+open-access books called [Computer Systems Security: Planning for
+Success](https://web.njit.edu/~rt494/security/) and [Cracking Codes with
+Python](https://inventwithpython.com/cracking/). You can access all of the
 source code and technical content for this book by checking out its GitHub
 repository and following along with the [schedule](schedule/index.qmd) and the
 [slides](slides/index.qmd) for this course, as found on this site.
