feat: Revise content in the syllabus/index.qmd about the assessment criteria.

--- a/syllabus/index.qmd
+++ b/syllabus/index.qmd
@@ -139,11 +139,12 @@ percentages during the academic semester.
 
 | Category                 | Percentage |
 |--------------------------|------------|
-| Class Participation      |  10%       |
-| Midterm Examination      |  15%       |
+| Class Participation      |  5%        |
+| In-Person Assessments    |  10%       |
+| Midterm Examinations     |  10%       |
 | Final Examination        |  15%       |
-| Algorithm All-Hands      |  10%       |
-| Algorithm Engineering    |  50%       |
+| Security Survey Projects |  25%       |
+| Security Summit Project  |  35%       |
 
 These assessment categories have the following definitions:
 
@@ -159,21 +160,25 @@ observed, during either class or laboratory sessions, undertaking
 non-course-related activities like viewing email, social media, or other
 content not about algorithm analysis. 
 
-- **Midterm Examination**: The midterm examination is an online, executable, and
-cumulative assessment covering all prior material from the course sessions, as
-outlined on the [course schedule](../schedule/index.qmd). Unless prior
+- **In-Person Assessments**: Conducted through an in-person conversation with
+the course instructor, the two in-person assessments are cumulative evaluations
+of both high-level and low-level knowledge in the field of computer security.
+All students should be prepared to answer at least one question each about their
+comprehension of both concepts and implementation details in the field of
+computer security. The instructor will assess each student response on a
+checkmark basis and report feedback through a private GitHub repository.
+
+- **Midterm Examination**: Each midterm examination is an online, executable,
+and cumulative assessment covering all prior material from the course sessions,
+as outlined on the [course schedule](../schedule/index.qmd). Unless prior
 arrangements are made with the instructor, all students should use their
 computer to take these tests on the scheduled date and to complete it in the
-stated location while taking no more than the required amount of time. The
+stated location while taking no more than the required amount of time. Each
 midterm is an executable examination that students will complete through the use
-of GitHub, VS Code, and the Python programming tools installed on their laptops.
-Following the completion of the midterm examination during a laboratory session,
-students will, during algorithm all-hands sessions, collaboratively complete and
-present an analytical and empirical evaluation of the performance of one
-component of their examination. Students may use external sources, including
-artificial intelligence coding assistants, during the completion of the midterm
-examination provided that they cite these sources and explain how they used them
-to complete the examination.
+of GitHub, VS Code, and the programming tools installed on their laptops.
+Students may use external sources, including artificial intelligence coding
+assistants, during the completion of a midterm examination provided that they
+cite these sources and explain how they used them to complete the examination.
 
 - **Final Examination**: The final examination is an online, executable,
 cumulative assessment covering all of the material during all of the course
@@ -182,43 +187,29 @@ prior arrangements are made with the instructor, all students should use their
 computer to take the final examination on the scheduled date and to complete it
 in the stated location while taking no more than the required amount of time.
 The cumulative final is an executable examination that a student will complete
-through the use of GitHub, VS Code, and the Python programming tools installed
-on their laptops. Students may use external sources, including artificial
-intelligence coding assistants, during the completion of the final examination
-provided that they cite these sources and explain how they used them to complete
-the examination.
+through the use of GitHub, VS Code, and the programming tools installed on their
+laptops. Students may use external sources, including artificial intelligence
+coding assistants, during the completion of the final examination provided that
+they cite these sources and explain how they used them to complete the
+examination.
 
-- **Algorithm All-Hands**: These projects enable students to explore both the
-scientific and engineering aspects of algorithm analysis, as outlined in the
-[course schedule](../schedule/index.qmd). During the completion of a
-*scientific study* in the field of algorithm analysis, students will complete
-and present a team-based project in which they propose and then answer a
-research question about the performance of a Python program. When completing an
-*engineering effort* in the field of algorithm analysis, students will build
-and present a team-based project in which they design, implement, document,
-release, and maintain software tools that support the rigorous evaluation of
-the performance (e.g., time or space overhead) of a Python program. Students
-may use external sources, including artificial intelligence coding assistants,
-during the completion of an algorithm all-hands project provided that they cite
-these sources and explain how they used them to complete their part(s) of an
-algorithm all-hands project.
+- **Security Survey Projects**: These two-week assignments invite students to
+explore the implementation details of various computer security concepts such as
+cryptography, cryptanalysis, and malware. These projects are completed through
+the design, implementation, documentation, and evaluation of computer programs
+in languages such as Python, Java, JavaScript, C, Go, and Rust. Students may use
+external sources, including artificial intelligence coding assistants, during
+the completion of a security survey project provided that they cite these
+sources and explain how they used them to complete the various components of an
+algorithm engineering project.
 
-- **Algorithm Engineering Projects**: These projects enable students to explore
-both the scientific and engineering aspects of algorithm analysis, as outlined
-in the [course schedule](../schedule/index.qmd). During the completion of this
-two-week project, students will design and implement a software system suitable
-for conducting experiments and then use it answer research questions that
-connect to previously discussed scientific content, as outlined in the [course
-schedule](../schedule/index.qmd). After implementing the benchmarking system,
-students will propose and formally state research questions and then discuss
-them with the course instructor during a laboratory session. Finally, students
-will conduct experiments to answer these research questions, collect data,
-analyze the results, and write a report that explains the results in the
-context of the implemented system. Students may use external sources, including
-artificial intelligence coding assistants, during the completion of an
-algorithm all-hands project provided that they cite these sources and explain
-how they used them to complete the various components of an algorithm
-engineering project.
+- **Security Summit Project**: Started in the fourth week of the academic
+semester, this long-term project invites students to propose, implement,
+evaluate, and present their own computer security system. Students may use
+external sources, including artificial intelligence coding assistants, during
+the completion of an algorithm all-hands project provided that they cite these
+sources and explain how they used them to complete the various components of an
+algorithm engineering project.
 
 #### Assessment Policies
 
